Finished all tasks

--- a/A2a-Introduction-Vizhub/index.html
+++ b/A2a-Introduction-Vizhub/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>A2 - Self Introduction</title>
 
+    <!-- Usfca icon-->
+    <link rel="icon" href="files/usficon.ico">
+
     <!-- You can import css from local files like this. -->
     <link rel="stylesheet" href="styles.css" />
 
@@ -10,7 +13,25 @@
     <script src="https://unpkg.com/d3@5.16.0/dist/d3.min.js"></script>
   </head>
   <body>
-    <div id="message"></div>
-    <script src="bundle.js"></script>
+
+  <h1>Muzhi Zhang</h1>
+
+  <h3>Resume: </h3>
+  <p><a href="files/Resume_Muzhi_Zhang.pdf" title="Resume"><b>Download My Resume</b></a></p>
+
+  <h3></h3>
+
+  <h3>Links: </h3>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/muzhi007/" title="Muzhi Zhang | LinkedIn">Muzhi Zhang | LinkedIn</a></li>
+    <li><a href="https://github.com/zmz0072000" title="zmz0072000 (Muzhi Zhang)">zmz0072000 | Github</a></li>
+    <li><a href="https://myusf.usfca.edu/marketing-communications/resources/mobile" title="Mobile | myUSF">Get USF Mobile App</a></li>
+  </ul>
+
+  <p>Hello World</p>
+
+  <!--  An example code to import script-->
+  <!--    <div id="message"></div>-->
+  <!--    <script src="bundle.js"></script>-->
   </body>
 </html>
