--- a/html5up-phantom-intro-page/index.html
+++ b/html5up-phantom-intro-page/index.html
@@ -25,6 +25,8 @@
 							<header>
 								<h1>Muzhi Zhang</h1>
 							</header>
+							<p><b>Software Developing Engineer<br>
+								University of San Francisco</b></p>
 
 						</div>
 					</header>
@@ -32,6 +34,9 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+
+							<hr />
+
 							<header>
 								<blockquote>Yesterday's tears are today's courage.<br><b>- Makoto Miyazaki</b></blockquote>
 								<hr />
@@ -58,14 +63,14 @@
 
 							<h2>Projects</h2>
 							<section class="tiles">
-								<article class="style3">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="files/Muzhi%20Zhang%20-%20Data%20Exploration%20through%20Tableau.pdf">
-										<h2>Project 1 <br>Report</h2>
+										<h2>Assignment 1 <br>Report</h2>
 										<div class="content">
-											<p>Download my project 1 report here.</p>
+											<p>Download my assignment 1 report here.</p>
 										</div>
 									</a>
 								</article>
@@ -117,7 +122,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Designed by: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
